[package]
name = "qmi8658c"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
accelerometer = { version = "0.12.0", optional = true }
bitflags = "1.3.2"
bytemuck = "1.12.1"
defmt = { version = "0.3.2", optional = true }
embedded-hal = "=1.0.0-alpha.8"
fugit = "0.3.6"
micromath = { version = "2.0.0", features = ["vector"], optional = true }
nb = "1.0.0"
num-derive = { version = "0.3.3", default-features = false }
num-traits = { version = "0.2.15", default-features = false }

[dev-dependencies]
test-case = "2.2.1"
embedded-hal-mock = { git = "https://github.com/dbrgn/embedded-hal-mock", branch = "1-alpha" }
once_cell = "1.14.0"
rand = "0.8.5"

[features]
default = []
defmt = ["dep:defmt", "fugit/defmt"]
accelerometer = ["dep:accelerometer"] # mutually exclusive with `micromath`
micromath = ["dep:micromath"]
